objects/Case.object
<CustomObject>
    <fields>
        <fullName>Sku_Style_Number__c</fullName>
        <label>Sku/Style Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Residence_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>State of Residence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Residence__c</fullName>
        <description>This Field is used to Show States in Personal Data Form</description>
        <inlineHelpText>Need to Select the State of Residence</inlineHelpText>
        <label>State of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_of_Residence__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>Sub-Type-READONLY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Availability Questions</fullName>
                </value>
                <value>
                    <fullName>Quality Concerns</fullName>
                </value>
                <value>
                    <fullName>Sizing Questions</fullName>
                </value>
                <value>
                    <fullName>Care Instructions</fullName>
                </value>
                <value>
                    <fullName>Product Feedback</fullName>
                </value>
                <value>
                    <fullName>Problem Placing Order</fullName>
                </value>
                <value>
                    <fullName>Tracking Order Shipment</fullName>
                </value>
                <value>
                    <fullName>Edit Existing Order</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Missing/Damaged Product</fullName>
                </value>
                <value>
                    <fullName>Return Policy</fullName>
                </value>
                <value>
                    <fullName>Returning Order</fullName>
                </value>
                <value>
                    <fullName>Creating Return Label</fullName>
                </value>
                <value>
                    <fullName>Tracking Return</fullName>
                </value>
                <value>
                    <fullName>Return Status</fullName>
                </value>
                <value>
                    <fullName>Signing Up</fullName>
                </value>
                <value>
                    <fullName>Program Questions</fullName>
                </value>
                <value>
                    <fullName>Adding Points</fullName>
                </value>
                <value>
                    <fullName>Redeeming Rewards</fullName>
                </value>
                <value>
                    <fullName>Account Balance</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Update Information</fullName>
                </value>
                <value>
                    <fullName>Problem Receiving</fullName>
                </value>
                <value>
                    <fullName>Unsubscribe</fullName>
                </value>
                <value>
                    <fullName>Access My Data</fullName>
                </value>
                <value>
                    <fullName>Delete My Data</fullName>
                </value>
                <value>
                    <fullName>Data Owner Request</fullName>
                </value>
                <value>
                    <fullName>Privacy Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubscriberValidationToken__c</fullName>
        <label>SubscriberValidationToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_First_Name__c</fullName>
        <description>Supplied First Name</description>
        <label>Supplied First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Last_Name__c</fullName>
        <label>Supplied Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppress_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspicious_Activity_Alert__c</fullName>
        <formula>Account.Fraud__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suspicious Activity Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party_Vendors__c</fullName>
        <label>Third Party Vendors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>Dick's Sporting Goods</fullName>
                </value>
                <value>
                    <fullName>Elsmore Swim Shop</fullName>
                </value>
                <value>
                    <fullName>Men's Swim Shop</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Swim Outlet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tommy_Adaptive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tommy Adaptive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Active_Time__c</fullName>
        <label>Total Active Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_On_Hold_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total On-Hold Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>Used for either the order tracking number or return tracking number</description>
        <label>Tracking Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrueAndCo_ReasonCodeDetails__c</fullName>
        <label>TrueAndCo_ReasonCodeDetails</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TrueAndCo_ReasonCodes__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add Promo Code</fullName>
                </value>
                <value>
                    <fullName>Address Change Request</fullName>
                </value>
                <value>
                    <fullName>Address Validation</fullName>
                </value>
                <value>
                    <fullName>Admin Issue</fullName>
                </value>
                <value>
                    <fullName>Authorization Hold</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>BBB Complaint</fullName>
                </value>
                <value>
                    <fullName>Business Solicitation</fullName>
                </value>
                <value>
                    <fullName>Cancellation Request</fullName>
                </value>
                <value>
                    <fullName>Cancel Request</fullName>
                </value>
                <value>
                    <fullName>Care Instructions</fullName>
                </value>
                <value>
                    <fullName>Catalog Subscribe Request</fullName>
                </value>
                <value>
                    <fullName>Catalog Unsubscribe Request</fullName>
                </value>
                <value>
                    <fullName>Chemical Questions</fullName>
                </value>
                <value>
                    <fullName>Color/Style</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Corporate Info Request</fullName>
                </value>
                <value>
                    <fullName>Corporate Responsibility</fullName>
                </value>
                <value>
                    <fullName>Defective</fullName>
                </value>
                <value>
                    <fullName>Delayed Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Delete Account</fullName>
                </value>
                <value>
                    <fullName>Double Charge</fullName>
                </value>
                <value>
                    <fullName>Email Errors</fullName>
                </value>
                <value>
                    <fullName>Email Unsubscribe Request</fullName>
                </value>
                <value>
                    <fullName>Exchanged Not Received</fullName>
                </value>
                <value>
                    <fullName>Exchanges</fullName>
                </value>
                <value>
                    <fullName>Extra Pad Request</fullName>
                </value>
                <value>
                    <fullName>Fabric Content</fullName>
                </value>
                <value>
                    <fullName>Feedback/Suggestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrueAndCo_ReasonCodes__c</fullName>
        <label>TrueAndCo_ReasonCodes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Fit</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Return/Exchange</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>TBYB</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrueAndCo_ReasonSubDetail__c</fullName>
        <label>TrueAndCo_ReasonSubDetail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TrueAndCo_ReasonCodeDetails__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Address Line Issue</fullName>
                </value>
                <value>
                    <fullName>Broken Clasp</fullName>
                </value>
                <value>
                    <fullName>Broken Hyperlink</fullName>
                </value>
                <value>
                    <fullName>Browser Issues/Clear Cache</fullName>
                </value>
                <value>
                    <fullName>Check Inventory</fullName>
                </value>
                <value>
                    <fullName>Checkout Error</fullName>
                </value>
                <value>
                    <fullName>Color Bleeding</fullName>
                </value>
                <value>
                    <fullName>Email Link Not Working</fullName>
                </value>
                <value>
                    <fullName>Fabric Stretching</fullName>
                </value>
                <value>
                    <fullName>Fabric Torn</fullName>
                </value>
                <value>
                    <fullName>Fit Quiz No Match</fullName>
                </value>
                <value>
                    <fullName>Gift Card Error</fullName>
                </value>
                <value>
                    <fullName>Incorrect Description</fullName>
                </value>
                <value>
                    <fullName>Incorrect Image</fullName>
                </value>
                <value>
                    <fullName>Incorrect Items Advertised</fullName>
                </value>
                <value>
                    <fullName>Incorrect Pricing</fullName>
                </value>
                <value>
                    <fullName>Login Issue</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Issue</fullName>
                </value>
                <value>
                    <fullName>Material Rolling</fullName>
                </value>
                <value>
                    <fullName>Order Cancellation</fullName>
                </value>
                <value>
                    <fullName>PayPal Error</fullName>
                </value>
                <value>
                    <fullName>Plus/Extended Sizing</fullName>
                </value>
                <value>
                    <fullName>Promo Code Error</fullName>
                </value>
                <value>
                    <fullName>Promotion Not Working</fullName>
                </value>
                <value>
                    <fullName>Referral Code Error</fullName>
                </value>
                <value>
                    <fullName>Reorder</fullName>
                </value>
                <value>
                    <fullName>Restock Inquiry</fullName>
                </value>
                <value>
                    <fullName>Return/Exchange Error</fullName>
                </value>
                <value>
                    <fullName>Split Seam</fullName>
                </value>
                <value>
                    <fullName>Stitching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validate_Subscriber_URL__c</fullName>
        <label>Validate Subscriber URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vendor_Email_Address__c</fullName>
        <label>Vendor Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VerificationHash__c</fullName>
        <defaultValue>'1234'</defaultValue>
        <description>Used by clickable email responses to validate the authenticity of the response.</description>
        <label>VerificationHash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Email_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>Web Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Name_READONLY__c</fullName>
        <description>This READONLY field is created to keep customers original details filled through web form</description>
        <label>Web Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Phone_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>Web Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Day_After_Resolved_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Case List View "Observation Form to Fill Out."</description>
        <label>3rd Day After Resolved Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdBrandName__c</fullName>
        <label>ZdBrandName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdCorporate__c</fullName>
        <label>Corporate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdCreatedDate__c</fullName>
        <label>ZdCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZdGoodService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Good Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdGroupId__c</fullName>
        <label>Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdLastModifiedDate__c</fullName>
        <label>ZdLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZdMarketing__c</fullName>
        <label>Marketing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdOrderID__c</fullName>
        <label>Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHAdaptive__c</fullName>
        <label>Adaptive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHDateofServiceIssue__c</fullName>
        <label>Date of Service Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZdPVHDistrictNumber__c</fullName>
        <label>District Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHEscalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdPVHHumanResources__c</fullName>
        <label>Human Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHInternational__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International ? (Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdPVHLicensing__c</fullName>
        <label>Licensing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHLoyalty__c</fullName>
        <label>Loyalty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHManufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHMisship__c</fullName>
        <label>Mis-ship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHOrders__c</fullName>
        <label>Orders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHPayment__c</fullName>
        <label>Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHPhonenumber__c</fullName>
        <label>Phone number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHPoorServiceType__c</fullName>
        <label>Poor Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHProductCategory__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHPublicRelations__c</fullName>
        <label>Public Relations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHRetailStore__c</fullName>
        <label>Retail Store</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHReturnPolicy__c</fullName>
        <label>Return Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHReturnReason__c</fullName>
        <label>Return Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHReturns__c</fullName>
        <label>Returns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHRewardsCardNumber__c</fullName>
        <label>Rewards Card Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHStoreNumber__c</fullName>
        <label>Store Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHSwimwearType__c</fullName>
        <label>Swimwear Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHTags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHThirdPartyVendor__c</fullName>
        <label>Third Party Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHTicketId__c</fullName>
        <externalId>true</externalId>
        <label>Zendesk PVH Ticket Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZdPVHUpdateAccountInfoReason__c</fullName>
        <label>Update Account Info Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHUserId__c</fullName>
        <externalId>true</externalId>
        <label>Zendesk PVH User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHWarnerOlgaStyleNumber__c</fullName>
        <label>Warner's / Olga Style Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHWholesaleDefectList__c</fullName>
        <label>Wholesale Defect List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHWholesaleDivision__c</fullName>
        <label>Wholesale Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHWorkTime__c</fullName>
        <label>Work Time (num)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdPVHeCommOrderID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eComm Order ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdParentTicketId__c</fullName>
        <externalId>true</externalId>
        <label>ZdParentTicketId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdProduct__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zendesk Profile</label>
        <referenceTo>ZdProfile__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZdRecipient__c</fullName>
        <label>Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTechnical__c</fullName>
        <label>Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCAccount__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCAvailability__c</fullName>
        <label>Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCBilling__c</fullName>
        <label>Billing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCCustomerAccommodation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CUSTOMER ACCOMMODATION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdTnCDHLUSPSIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DHL/USPS Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdTnCDefectiveIssue__c</fullName>
        <label>Defective Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCFit__c</fullName>
        <label>Fit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCGeodisIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geodis Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdTnCHumpDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hump Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdTnCLinkedExternalTicket__c</fullName>
        <label>Linked External Ticket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCManufacturingIssueList__c</fullName>
        <label>Manufacturing Issue List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCOrder__c</fullName>
        <label>Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCPDP__c</fullName>
        <label>PDP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCPreauthorizationPayment__c</fullName>
        <label>Pre-authorization Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCProductID__c</fullName>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCPromoCode__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCReturnExchange__c</fullName>
        <label>Return/Exchange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCShipping__c</fullName>
        <label>Shipping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCShoppingCart__c</fullName>
        <label>Shopping Cart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCTBYBIssue__c</fullName>
        <label>TBYB Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCTicketId__c</fullName>
        <externalId>true</externalId>
        <label>Zendesk T&amp;C Ticket Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZdTnCUserId__c</fullName>
        <externalId>true</externalId>
        <label>Zendesk T&amp;C User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCWhereWasItBought__c</fullName>
        <label>Where was it bought?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTotalTimeSpent__c</fullName>
        <label>Total time spent (sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZdWebsiteIssue__c</fullName>
        <label>Website Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cancelationtimestamp__c</fullName>
        <label>c_cancelationtimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c_extensiontimestamp__c</fullName>
        <label>c_extensiontimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c_iscanceled__c</fullName>
        <label>c_iscanceled</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_isexpired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>c_isexpired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c_isextended__c</fullName>
        <label>c_isextended</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_redemptiontimestamp__c</fullName>
        <label>c_redemptiontimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>emailToAddress__c</fullName>
        <label>emailToAddress</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expirytimestamp__c</fullName>
        <label>expirytimestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>